--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "comfyui-chord"
 description = "PBR material estimation custom nodes for paper: Chord: Chain of Rendering Decomposition for PBR Material Estimation from Generated Texture Images"
 version = "1.0.0"
 license = { file = "LICENSE" }
-dependencies = []
+dependencies = ["huggingface_hub[hf_xet]", "diffusers", "omegaconf", "imageio"]
 
 [project.urls]
 Repository = "https://github.com/ubisoft/ComfyUI-Chord"
